--- a/IDE/Vdom/vdom/components/editor/Editor.mxml
+++ b/IDE/Vdom/vdom/components/editor/Editor.mxml
@@ -4,8 +4,7 @@
 	xmlns:containers="vdom.components.editor.containers.*"
 	
 	width="100%" height="100%"
-	
-	backgroundColor="#ffffff" backgroundAlpha="1.0"
+	
 	horizontalScrollPolicy="off" verticalScrollPolicy="off"
 	
 	creationComplete="creationCompleteHandler();"
@@ -24,6 +23,7 @@
 	    <mx:VBox id="main" width="100%" bottom="0" height="100%">
 	    	<containers:WorkArea id="workArea"
 	    		width="100%" height="100%" visible="false"
+	    		dropShadowEnabled="true"
 	    		backgroundColor="#ffffff" backgroundAlpha="1.0" 
 	    		borderStyle="solid" borderThickness="2" borderColor="#000000"
 	    		dataProvider="{editorDataManager.objectDescription}"
@@ -31,12 +31,13 @@
 	    	<containers:Toolbar width="100%" type="{editorDataManager.objectDescription}" id="toolbar"/>
 	    </mx:VBox>
 	    
-		<mx:VBox autoLayout="true" verticalGap="10" paddingTop="10" paddingLeft="10" paddingRight="10" minHeight="0" verticalScrollPolicy="auto" height="100%" width="220" horizontalScrollPolicy="off">
-			<containers:AttributesPanel title="Attributes" id="objectAttributes" label="Properties"
-				paddingBottom="10" paddingTop="10" paddingLeft="10" paddingRight="10" cornerRadius="0" dataProvider="{editorDataManager.objectDescription}" width="200">
-	    	</containers:AttributesPanel>
-	    	<containers:ClosablePanel id="helpPanel" title="Help"  width="200" height="64">
-	    		<mx:Text htmlText="{objectAttributes.help}" condenseWhite="true" width="100%" height="100%"/>
+		<mx:VBox autoLayout="true" verticalGap="5" 
+			paddingTop="5" paddingLeft="0" paddingRight="25" minHeight="0" 
+			verticalScrollPolicy="auto" height="100%" width="220" horizontalScrollPolicy="off">
+			<containers:AttributesPanel id="objectAttributes" title="Attributes"  
+				dataProvider="{editorDataManager.objectDescription}" width="200" />
+	    	<containers:ClosablePanel id="helpPanel" title="Help"  width="200">
+	    		<mx:Text htmlText="{objectAttributes.help}" condenseWhite="true" width="100%" minHeight="0"/>
 	    	</containers:ClosablePanel>
 	    	<containers:ClosablePanel id="pagePanel" title="Pages"  width="200">
 	    		<mx:List id="pageList" labelField="@Name" width="100%" minHeight="0" change="topLevelObjectChange()"/>
