--- a/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
@@ -152,6 +152,7 @@
 				}
 			}
 		}
+		toXML();
 	}
 	
 	private function markLines(muEvt:MouseEvent):void
@@ -384,6 +385,21 @@
 		
 		vctTest.graphics.clear();
 		vctTest.createVector(curTree, pnTo);	
+	}
+	
+	private function toXML():void
+	{
+		var outXML:XML = new XML();
+		outXML = <rot />;
+		
+		for (var level:String in massLines)
+		for(var ind1:String in massLines[level])
+			for(var ind2:String in massLines[level][ind1])
+			{
+				outXML.addNamespace(ind2);
+			}
+			
+		trace(outXML);
 	}
 	
 	]]>
