--- a/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
@@ -389,14 +389,14 @@
 	
 	private function toXML():void
 	{
-		var outXML:XML = new XML();
-		outXML = <rot />;
+		var outXML:XML = <Structure/> ;
 		
 		for (var level:String in massLines)
 		for(var ind1:String in massLines[level])
 			for(var ind2:String in massLines[level][ind1])
 			{
-				outXML.addNamespace(ind2);
+				if (outXML.Object.(@ID == ind1)
+				
 			}
 			
 		trace(outXML);
