--- a/IDE/Vdom/vdom/containers/Thumbnail.mxml
+++ b/IDE/Vdom/vdom/containers/Thumbnail.mxml
@@ -4,7 +4,7 @@
 	verticalScrollPolicy="off" horizontalScrollPolicy="off" 
 	verticalGap="0" horizontalGap="0">
 	
-	<mx:Image focusEnabled="false" id="img" width="50" height="50" />
-	<mx:Label fontWeight="bold" text="zzzzzz"/>
+	<mx:Canvas id="img" width="50" height="50" backgroundColor="#ff0000" borderStyle="none"/>
+	<mx:Label width="50" fontWeight="bold" text="app_name" height="15" textAlign="center" truncateToFit="true"/>
 </mx:VBox>
 
