--- a/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/TreeEditor/vdom/components/treeEditor/TreeEditor.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="init()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="init()" label="add Element">
 <mx:Script>
 	<![CDATA[
 		import mx.events.MoveEvent;
@@ -13,43 +13,43 @@
 	//данные которые уже есть
 	private var xml1:XML = 
 <Structure>
-	<Object ID="id_01" top="10" left="10">
-		<Level Index="0">
-			<Object ID="id_02"/>
-		</Level>
-		<Level Index="1">
-			<Object ID="id_04"/>
-		</Level>
-		<Level Index="2">
-			<Object ID="id_05"/>
-			<Object ID="id_06"/>
-		</Level>
-		<Level Index="3">
-			<Object ID="id_07"/>
-			<Object ID="id_08"/>
-		</Level>
-		<Level Index="4">
-			<Object ID="id_02"/>
-		</Level>
-		<Level Index="5">
-			<Object ID="id_03"/>
-			<Object ID="id_04"/>
-		</Level>
-	</Object>
-	<Object ID="id_02" top="10" left="150">
-		<Level Index="0">
-			<Object ID="id_03"/>
-			<Object ID="id_04"/>
-		</Level>
-		</Object>
-	<Object ID="id_03" top="50" left="10"/>
-	<Object ID="id_04" top="100" left="150"/>
-	<Object ID="id_05" top="150" left="150"/>
-	<Object ID="id_06" top="90" left="10"/>
-	<Object ID="id_07" top="50" left="200"/>
-	<Object ID="id_08" top="200" left="200"/>
-</Structure>;  
- 
+  <Object ID="id_02" left="31" top="93">
+    <Level Index="0">
+      <Object ID="id_04"/>
+      <Object ID="id_03"/>
+    </Level>
+  </Object>
+  <Object ID="id_04" left="28" top="259"/>
+  <Object ID="id_03" left="302" top="40"/>
+  <Object ID="id_01" left="280" top="239">
+    <Level Index="0">
+      <Object ID="id_02"/>
+    </Level>
+    <Level Index="1">
+      <Object ID="id_04"/>
+    </Level>
+    <Level Index="2">
+      <Object ID="id_05"/>
+      <Object ID="id_06"/>
+    </Level>
+    <Level Index="3">
+      <Object ID="id_08"/>
+      <Object ID="id_07"/>
+    </Level>
+    <Level Index="4">
+      <Object ID="id_02"/>
+    </Level>
+    <Level Index="5">
+      <Object ID="id_04"/>
+      <Object ID="id_03"/>
+    </Level>
+  </Object>
+  <Object ID="id_05" left="624" top="74"/>
+  <Object ID="id_06" left="402" top="446"/>
+  <Object ID="id_08" left="552" top="281"/>
+  <Object ID="id_07" left="144" top="438"/>
+</Structure>
+
  	private var massTreeElements:Array = new Array();
 	private var massLines:Array = new Array();
 	private var resizer:ResizeManager;
@@ -78,16 +78,7 @@
 			massTreeElements[obID].y = xmlObj.@top.toXMLString();	
 			
 			massTreeElements[obID].addEventListener(TreeEditorEvent.REDRAW , mouseHandler);	
-		//-	massTreeElements[obID].addEventListener(TreeEditorEvent.START_DRAG , startingDrag);	
-		//*	massTreeElements[obID].addEventListener(TreeEditorEvent.START_DRAW_LINE , startDrawLine);	
-		//*	massTreeElements[obID].addEventListener(TreeEditorEvent.DELETE , deleteTreeElement);	
-			//massTreeElements[obID].addEventListener(TreeEditorEvent.STOP_DRAG , stopingDrag);
 			massTreeElements[obID].addEventListener(MouseEvent.MOUSE_DOWN, mouseDownHandler);
-		//	massTreeElements[obID].addEventListener(MouseEvent.MOUSE_OVER, mouseOverHandler);
-		//	massTreeElements[obID].addEventListener(MouseEvent.MOUSE_OUT, mouseOutHandler);
-		//	massTreeElements[obID].addEventListener(MouseEvent.CLICK, treeElementsClick);
-			//
-		//	massTreeElements[obID].addEventListener(MouseEvent.MOUSE_UP, mouseUpHandler);	//
 			addChild(massTreeElements[obID]);
 			
 		}
@@ -98,49 +89,37 @@
 		addChild(btLine);
 		
 		temMenu = new TreeElementMenu();
-	//	temMenu.addEventListener(MouseEvent.MOUSE_OVER, showTEMMenu);
-	//	temMenu.addEventListener(MouseEvent.MOUSE_OUT, hideTEMMenu);
 		temMenu.addEventListener(TreeEditorEvent.DELETE, deleteTreeElement);
 		temMenu.addEventListener(TreeEditorEvent.START_DRAW_LINE, startDrawLine);
 		temMenu.addEventListener(TreeEditorEvent.RESIZE_TREE_ELEMENT, hideTreeElement);
 		
 		addChild(temMenu);
 		
-		addEventListener(MouseEvent.CLICK, hideTemMenu);
+	//	addEventListener(MouseEvent.CLICK, hideTemMenu);
 		addEventListener(MouseEvent.MOUSE_MOVE, alfaMenu);
 	}
 	
 	private function hideTreeElement(trEvt:TreeEditorEvent):void
 	{
 		massTreeElements[curTree.ID].resize = true;
-		//temMenu.position = massTreeElements[curTree.ID];
 	}
 	
-	private function hideTemMenu(msEvt:MouseEvent):void
-	{
-		
-	}
+
 	
 	private function alfaMenu(msEvt:MouseEvent):void
 	{
 		temMenu.alfaMenu(mouseX - temMenu.x,  mouseY - temMenu.y );
-	//	trace("mouseX: " + mouseX);
-	//	trace("temMenu.x: " + temMenu.x);
-	//	trace("mouseX - temMenu.x: " + (mouseX - temMenu.x) );
 	}
 	private function treeElementsClick(msEvt:MouseEvent):void
 	{
 		/***-++++++++++++-***/
 		temMenu.position = msEvt.currentTarget;
-	//	temMenu.x = msEvt.currentTarget.x;
-	//	temMenu.y = msEvt.currentTarget.y - temMenu.height;
 		temMenu.setAlpha = 0.5;
 	}
 	
 	private function delButtonOperation(msEvt:MouseEvent):void
 	{
 		//ссылка на самого себя 
-		// curLine;
 			for (var level:String in massLines)
 					for (var frsTrElem:String in massLines[level])
 						for (var sknTrElem:String in massLines[level][frsTrElem])
@@ -186,8 +165,6 @@
 		curLine.mark = false;
 		curLine = muEvt.currentTarget;
 		curLine.mark = true;
-	//	btLine.x = curLine.btX  ;
-	//	btLine.y = curLine.btY - btLine.height;
 		btLine.x = mouseX - btLine.width / 2;
 		btLine.y = mouseY  - btLine.height - 2;
 		btLine.visible = true;
@@ -195,7 +172,6 @@
 	
 	private function mouseHandler(msEvt:TreeEditorEvent):void
 	{
-		//trace(msEvt.currentTarget.ID);
 		redrawLines(msEvt.currentTarget.ID);
 	}
 	
@@ -207,7 +183,6 @@
 	
 	private function redrawLines(strID:String):void
 	{
-	//	var strID:String 
 		for (var level:String in massLines)
 		for(var ind1:String in massLines[level])
 			for(var ind2:String in massLines[level][ind1])
@@ -215,7 +190,6 @@
 					massLines[level][ind1][ind2].updateVector();
 				
 		temMenu.position = massTreeElements[strID];
-		trace('redrawLines');
 	}
 	
 	/******
@@ -231,6 +205,18 @@
 	+ прозрачность у меню в зависимости от расстоянию до мышки
 	+ свертывание и развертывание елементов
 	
+	- загрузка данных на сервер
+	- чтение данных с сервера
+	
+	* меню:
+		- уровни
+		- показывать/скрывать
+		- рисовать в соответсвии выделеного уровня
+	
+	- получение рисунков
+	- выбор локального рисунка;
+	- подтверждение на удаление;
+	- нормальные линии между елементами дерева
 	*/
 	
 	
@@ -249,20 +235,15 @@
 	*/
 	private function stopingDrag(trEvt:MouseEvent):void
 	{/****************************/
-		trace('stopingDrag')
 		canRectangle.stopDrag();
 		curTree.x = canRectangle.x;
 		curTree.y = canRectangle.y;
-	//	curTree.ID = trEvt.currentTarget.ID;
 		canRectangle.graphics.clear();
 		canRectangle.removeEventListener(MouseEvent.MOUSE_UP, stopingDrag);
 		redrawLines(curTree.ID);
 		removeChild(canRectangle);
-		//removeChild(massTreeElements[curTree.ID]) /**********++++++++*****/
 	
 		temMenu.position = curTree;
-	//	temMenu.x = trEvt.currentTarget.x;
-	//	temMenu.y = trEvt.currentTarget.y;
 		temMenu.setAlpha = 0.5;
 		
 	}
@@ -277,11 +258,13 @@
 	
 	private function mouseDownHandler(evt:MouseEvent):void
 	{
+		//toXML();
+		btLine.visible = false;
+		
 			pnFrom.x = evt.currentTarget.x;
 			pnFrom.y =evt.currentTarget.y;
 			
 			temMenu.position = evt.currentTarget;
-	//	trace('startingDrag - blDrawLine: '+ blDrawLine);
 		if(!blDrawLine)
 		{
 		/*---выделяем и перетаскиваем обьект---*/	
@@ -324,7 +307,7 @@
 						if((frsTrElem == fromObj && sknTrElem == toObj ) ||
 							(frsTrElem == toObj && sknTrElem ==  fromObj ))
 							{	
-								trace('return');
+							//	trace('return');
 								curTree = evt.currentTarget;
 								return;
 								
@@ -340,10 +323,7 @@
 		}
 
 		// выделяем необходимый елемент дерева
-	//	curTree.alpha = 1;
 		curTree = evt.currentTarget;
-	//	curTree.alpha = 0.5;
-
 	}
 	
 	/**
@@ -407,9 +387,6 @@
 	*/
 	private function drLine (mEvt:MouseEvent):void
 	{
-		/*var tX:int = mouseX - pnFrom.x;
-		var tY:int = mouseY - pnFrom.y;
-		*/
 		var tX:int = mouseX - curTree.x;
 		var tY:int = mouseY - curTree.y;
 		
@@ -451,7 +428,7 @@
 				{
 					object.@ID = ind1;
 					object.@left = massTreeElements[ind1].x;
-					object.@left = massTreeElements[ind1].y;
+					object.@top = massTreeElements[ind1].y;
 					outXML.appendChild(object.toXMLString());
 				}
 				
@@ -472,19 +449,31 @@
 				{
 					object.@ID = ind2;
 					object.@left = massTreeElements[ind2].x;
-					object.@left = massTreeElements[ind2].y;
+					object.@top = massTreeElements[ind2].y;
 					outXML.appendChild(object.toXMLString());
 				}	
 			}
 			
-	//	trace(outXML);
+		
 	}
-	
+		private function addTreeElement():void
+		{
+			var obID:String = String(Math.random());
+			massTreeElements[obID] =  new TreeElement();
+			massTreeElements[obID].name = obID;
+			massTreeElements[obID].x = 0;
+			massTreeElements[obID].y = 0;	
+			
+			massTreeElements[obID].addEventListener(TreeEditorEvent.REDRAW , mouseHandler);	
+			massTreeElements[obID].addEventListener(MouseEvent.MOUSE_DOWN, mouseDownHandler);
+			addChild(massTreeElements[obID]);
+			//trace(obID);
+		}
 	
 	
 	]]>
 </mx:Script>
 <mx:Canvas id="cnvLevelTop"/>
 <mx:Canvas id="cnvLevelDown"/>
-
+<mx:Button id="btAddTreeElement" label="add element" right="10" top="10"  click="addTreeElement()"/>
 </mx:Canvas>
